# SnakeGame

SnakeGame/: CMakeLists.txt  README.md
SnakeGame/include/: snake.h
SnakeGame/src/: SnakeGameManager.cpp  main.cpp  snake.c
